<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:key="@string/key_about"
        android:title="@string/about" >

        <Preference
            android:key="@string/key_rating"
            android:title="@string/rating_settings" />

        <Preference
            android:key="@string/key_suggestion"
            android:title="@string/suggestion_settings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/profile" >

        <Preference
            android:key="@string/key_profile"
            android:title="@string/logged_in_account" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/app_name_capital" >

        <Preference
            android:key="@string/key_version"
            android:title="@string/version_settings" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Legal" >

        <Preference
            android:key="privacy"
            android:title="Privacy" />

        <Preference
            android:key="terms_of_service"
            android:title="Terms of Service" />

        <Preference
            android:key="cookie_policy"
            android:title="Cookie Policy" />
    </PreferenceCategory>
</PreferenceScreen>
