<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/events"
        android:icon="@drawable/ic_baseline_event"
        android:title="@string/events" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_grey"
        android:title="@string/search" />

    <item
        android:id="@+id/likes"
        android:icon="@drawable/ic_baseline_favorite_border"
        android:title="@string/likes" />

    <item
        android:id="@+id/tickets"
        android:icon="@drawable/ic_outline_ticket"
        android:title="@string/tickets" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_outline_account_circle"
        android:title="@string/profile" />
    
</menu>
