<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin_medium"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_extra_large"
        android:textSize="@dimen/text_size_extra_large"
        android:textColor="@color/light_grey"
        android:text="@string/what_time"/>

    <TextView
        android:id="@+id/anytimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_extra_large"
        android:textSize="@dimen/text_size_extra_large"
        android:textColor="@color/light_grey"
        android:text="@string/anytime"/>

    <TextView
        android:id="@+id/todayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_large"
        android:textSize="@dimen/text_size_extra_large"
        android:textColor="@color/light_grey"
        android:text="@string/today"/>

    <TextView
        android:id="@+id/tomorrowTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_large"
        android:textSize="@dimen/text_size_extra_large"
        android:textColor="@color/light_grey"
        android:text="@string/tomorrow"/>

    <TextView
        android:id="@+id/thisWeekendTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_large"
        android:textSize="@dimen/text_size_extra_large"
        android:textColor="@color/light_grey"
        android:text="@string/weekend"/>

    <TextView
        android:id="@+id/nextMonthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_large"
        android:textSize="@dimen/text_size_extra_large"
        android:textColor="@color/light_grey"
        android:text="@string/month"/>

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_extra_large"
        android:textColor="@color/light_grey"
        android:text="@string/pick_date"/>

</LinearLayout>
