<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootView"
    android:padding="@dimen/padding_medium"
    android:orientation="vertical"
    tools:context="org.fossasia.openevent.general.search.SearchFilterFragment">

    <LinearLayout
        android:layout_marginBottom="@dimen/layout_margin_medium"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dateLabel"
            android:padding="@dimen/padding_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_expanded_title"
            android:text="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginStart="@dimen/layout_margin_large"
            android:background="?selectableItemBackground"
            android:drawableStart="@drawable/ic_time"
            android:padding="@dimen/padding_small"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/padding_medium"
            android:textSize="@dimen/text_size_larger"
            android:text="@string/anytime"
            android:id="@+id/tvSelectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_medium">

        <TextView
            android:id="@+id/locationLabel"
            android:padding="@dimen/padding_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_expanded_title"
            android:text="@string/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginStart="@dimen/layout_margin_large"
            android:background="?selectableItemBackground"
            android:drawableTint="@color/light_grey"
            android:drawableStart="@drawable/ic_location_pin"
            android:padding="@dimen/padding_small"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/padding_medium"
            android:textSize="@dimen/text_size_larger"
            android:text="@string/anywhere"
            android:id="@+id/tvSelectLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_medium">

        <TextView
            android:id="@+id/categoryLabel"
            android:padding="@dimen/padding_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_expanded_title"
            android:text="@string/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginStart="@dimen/layout_margin_large"
            android:background="?selectableItemBackground"
            android:drawableTint="@color/light_grey"
            android:drawableStart="@drawable/ic_star_border"
            android:padding="@dimen/padding_small"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/padding_medium"
            android:textSize="@dimen/text_size_larger"
            android:text="@string/anything"
            android:id="@+id/tvSelectCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/PriceLabel"
            android:padding="@dimen/padding_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_expanded_title"
            android:text="@string/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:layout_marginEnd="@dimen/layout_margin_large"
            android:padding="@dimen/padding_medium"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/light_grey"
            android:text="@string/free_stuff"
            android:id="@+id/freeStuffCheckBox"
            android:layoutDirection="rtl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sortLabel"
            android:padding="@dimen/padding_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_expanded_title"
            android:text="@string/sort_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layoutDirection="rtl"
                android:padding="@dimen/padding_small"
                android:textSize="@dimen/text_size_large"
                android:id="@+id/dateRadioButton"
                android:checked="false" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layoutDirection="rtl"
                android:padding="@dimen/padding_small"
                android:textSize="@dimen/text_size_large"
                android:id="@+id/nameRadioButton"
                android:layout_gravity="center_horizontal"
                android:checked="false" />
        </RadioGroup>

    </LinearLayout>
</LinearLayout>
