<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large">
    <LinearLayout
        android:id="@+id/confirmEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/layout_margin_medium"
        android:visibility="gone"
        tools:visibility="visible">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_email_message"
            android:layout_marginBottom="@dimen/layout_margin_medium"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_hint"
            android:layout_marginBottom="@dimen/details_margin_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmEmailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:enabled="false"
            android:text="@string/confirm"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirmDeleteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/event_details_divider"
            android:background="@color/grey"
            android:layout_marginBottom="@dimen/layout_margin_medium"/>
        <CheckBox
            android:id="@+id/confirmDeleteCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_delete_checkbox_message"
            android:textColor="@color/greyMore"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginEnd="@dimen/layout_margin_medium"
                android:textColor="@color/black"
                android:text="@string/cancel"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:enabled="false"
                android:text="@string/delete"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
